--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
     "@heroicons/vue": "^2.2.0",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "feather-icons": "^4.29.2",
