--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "feather-icons": "^4.29.2",
+    "marked": "^16.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
